--- a/newtab.html
+++ b/newtab.html
@@ -23,22 +23,22 @@
                 <img src="./images/github.png" alt="GitHub">
             </a>
             <a href="https://chat.openai.com" target="_blank">
-                <img src="https://static.vecteezy.com/system/resources/previews/022/227/364/non_2x/openai-chatgpt-logo-icon-free-png.png" alt="ChatGPT">
+                <img src="./images/gpt.webp" alt="ChatGPT">
             </a>
             <a href="https://www.youtube.com" target="_blank">
-                <img src="https://images.vexels.com/media/users/3/137425/isolated/preview/f2ea1ded4d037633f687ee389a571086-youtube-icon-logo.png?w=360" alt="YouTube">
+                <img src="./images/youtube.webp" alt="YouTube">
             </a>
             <a href="https://www.linkedin.com" target="_blank">
-                <img src="https://images.icon-icons.com/2429/PNG/512/linkedin_logo_icon_147268.png" alt="LinkedIn">
+                <img src="./images/linkedin.webp" alt="LinkedIn">
             </a>
             <a href="https://mail.google.com" target="_blank">
-                <img src="https://static.vecteezy.com/system/resources/previews/022/613/021/non_2x/google-mail-gmail-icon-logo-symbol-free-png.png" alt="Gmail">
+                <img src="./images/gmail.webp" alt="Gmail">
             </a>
             <a href="https://leetcode.com" target="_blank">
-                <img src="https://leetcode.com/favicon.ico" alt="LeetCode">
+                <img src="./images//leetcode.webp" alt="LeetCode">
             </a>
             <a href="https://web.whatsapp.com" target="_blank">
-                <img src="https://web.whatsapp.com/favicon.ico" alt="WhatsApp">
+                <img src="./images/whatsapp.ico" alt="WhatsApp">
             </a>
         </div>
 
