--- a/newtab.html
+++ b/newtab.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Neon Developer NTP</title>
+    <title>Neon Theme</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="background"></div>
-    <div class="particles"></div> <!-- new animated layer -->
+    <div class="particles"></div>
 
 
     <div class="content">
