auto suggetions added

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 
     <div class="content">
+        <!-- <h1>Welcome, Samir</h1> -->
+        <h1 class="google">google</h1>
         <form id="searchForm" action="https://www.google.com/search" method="GET">
-            <input type="text" name="q" placeholder="Search Google..." class="search-box">
-            <h1>Welcome, Samir</h1>
-            <p class="neon-text">Your code. Your world. Your flow.</p>
+            <input type="text" name="q" class="search-box" placeholder="Search Google..." autocomplete="off" />
+            <div id="suggestions" class="suggestions"></div>
         </form>
         <div class="recent-sites">
             <a href="https://github.com" target="_blank">
